--- a/index.html
+++ b/index.html
@@ -241,32 +241,32 @@
               <h2 class="our-customers">Customers</h2>
               <ul class="list">
                 <li class="client">
-                  <svg class="client-icon" width="168" height="88">
+                  <svg class="client-icon" width="104" height="56">
                     <use href="./images/icons.svg#client-1"></use>
                   </svg>
                 </li>
                 <li class="client">
-                  <svg class="client-icon" width="168" height="88">
+                  <svg class="client-icon" width="104" height="56">
                     <use href="./images/icons.svg#client-2"></use>
                   </svg>
                 </li>
                 <li class="client">
-                  <svg class="client-icon" width="168" height="88">
+                  <svg class="client-icon" width="104" height="56">
                     <use href="./images/icons.svg#client-3"></use>
                   </svg>
                 </li>
                 <li class="client">
-                  <svg class="client-icon" width="168" height="88">
+                  <svg class="client-icon" width="104" height="56">
                     <use href="./images/icons.svg#client-4"></use>
                   </svg>
                 </li>
                 <li class="client">
-                  <svg class="client-icon" width="168" height="88">
+                  <svg class="client-icon" width="104" height="56">
                     <use href="./images/icons.svg#client-5"></use>
                   </svg>
                 </li>
                 <li class="client">
-                  <svg class="client-icon" width="168" height="88">
+                  <svg class="client-icon" width="104" height="56">
                     <use href="./images/icons.svg#client-6"></use>
                   </svg>
                 </li>
@@ -277,10 +277,37 @@
         <!--Footer-->
       <footer class="footer-wrapper">
         <div class="container footer">
+            <div class="logo-wrapper">
               <a href="./index.html" class="logo link">Web<span class="logo-col-w">Studio</span></a>
               <p class="text-footer">
                 Increase the flow of customers and sales for your business with
                 digital marketing & growth solutions.</p>
+            </div>
+            <div class="social-media-wrapper">
+              <p class="social-media">Social media</p>
+              <ul class="list">
+                <li class="media-icons">
+                  <svg class="media-icon" width="40" height="40">
+                    <use href="./images/icons.svg#media-instagram"></use>
+                  </svg>
+                </li>
+                <li class="media-icons">
+                  <svg class="media-icon" width="40" height="40">
+                    <use href="./images/icons.svg#media-twitter"></use>
+                  </svg>
+                </li>
+                <li class="media-icons">
+                  <svg class="media-icon" width="40" height="40">
+                    <use href="./images/icons.svg#media-facebook"></use>
+                  </svg>
+                </li>
+                <li class="media-icons">
+                  <svg class="media-icon" width="40" height="40">
+                    <use href="./images/icons.svg#media-linkedin"></use>
+                  </svg>
+                </li>
+              </ul>
+            </div>
         </div>
       </footer>
   </body>
