--- a/portfolio.html
+++ b/portfolio.html
@@ -143,14 +143,41 @@
           </div>
         </section>
       </main>
-        <!--Footer-->
-        <footer class="footer-wrapper">
-          <div class="container footer">
-                <a href="./index.html" class="logo link">Web<span class="logo-col-w">Studio</span></a>
-                <p class="text-footer">
-                  Increase the flow of customers and sales for your business with
-                  digital marketing & growth solutions.</p>
-          </div>
-        </footer>
+  <!--Footer-->
+  <footer class="footer-wrapper">
+    <div class="container footer">
+        <div class="logo-wrapper">
+          <a href="./index.html" class="logo link">Web<span class="logo-col-w">Studio</span></a>
+          <p class="text-footer">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.</p>
+        </div>
+        <div class="social-media-wrapper">
+          <p class="social-media">Social media</p>
+          <ul class="list">
+            <li class="media-icons">
+              <svg class="media-icon" width="40" height="40">
+                <use href="./images/icons.svg#media-instagram"></use>
+              </svg>
+            </li>
+            <li class="media-icons">
+              <svg class="media-icon" width="40" height="40">
+                <use href="./images/icons.svg#media-twitter"></use>
+              </svg>
+            </li>
+            <li class="media-icons">
+              <svg class="media-icon" width="40" height="40">
+                <use href="./images/icons.svg#media-facebook"></use>
+              </svg>
+            </li>
+            <li class="media-icons">
+              <svg class="media-icon" width="40" height="40">
+                <use href="./images/icons.svg#media-linkedin"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
+    </div>
+  </footer>
   </body>
 </html>
