--- a/index.html
+++ b/index.html
@@ -52,9 +52,11 @@
             <h2 class="advantages">Our advantages</h2>
             <ul class="list">
               <li class="item">
-              <svg class="icon" width="264" height="112">
+              <div class="icon-wrapper">
+              <svg class="icon" width="64" height="64">
                 <use href="./images/icons.svg#antenna"></use>
               </svg>
+              </div>
               <h3 class="feature">Strategy</h3>
               <p class="feature-text">
                 Our goal is to identify the business problem to walk away with
@@ -63,9 +65,11 @@
             </li>
             <!--Feature 2-->
             <li class="item">
-              <svg class="icon" width="264" height="112">
+              <div class="icon-wrapper">
+              <svg class="icon" width="64" height="64">
                 <use href="./images/icons.svg#clock"></use>
               </svg>
+              </div>
               <h3 class="feature">Punctuality</h3>
               <p class="feature-text">
                 Bring the key message to the brand's audience for the best price
@@ -74,9 +78,11 @@
             </li>
             <!--Feature 3-->
             <li class="item">
-              <svg class="icon" width="264" height="112">
+              <div class="icon-wrapper">
+              <svg class="icon" width="64" height="64">
                 <use href="./images/icons.svg#diagram"></use>
               </svg>
+              </div>
               <h3 class="feature">Diligence</h3>
               <p class="feature-text">
                 Research and confirm brands that present the strongest digital
@@ -85,9 +91,11 @@
             </li>
             <!--Feature 4-->
             <li class="item">
-              <svg class="icon" width="264" height="112">
+              <div class="icon-wrapper">
+              <svg class="icon" width="64" height="64">
                 <use href="./images/icons.svg#astronaut"></use>
               </svg>
+              </div>
               <h3 class="feature">Technologies</h3>
               <p class="feature-text">
                 Design practice focused on digital experiences. We bring forth a
