--- a/index.html
+++ b/index.html
@@ -129,24 +129,32 @@
                   <p class="work-position">Product Designer</p>
                   <ul class="list">
                     <li class="social-icons">
-                      <svg class="social-icon" width="40" height="40">
+                      <a href="https://" class="circle link">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
+                      </a>
                     </li>
                     <li class="social-icons">
-                      <svg class="social-icon" width="40" height="40">
+                      <a href="https://" class="circle link">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
+                      </a>
                     </li>
                     <li class="social-icons">
-                      <svg class="social-icon" width="40" height="40">
+                      <a href="https://" class="circle link">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
+                      </a>
                     </li>
                     <li class="social-icons">
-                      <svg class="social-icon" width="40" height="40">
+                      <a href="https://" class="circle link">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
+                      </a>
                     </li>
                   </ul>
                   </div>
@@ -159,24 +167,32 @@
                 <p class="work-position">Frontend Developer</p>
                 <ul class="list">
                   <li class="social-icons">
-                    <svg class="social-icon" width="40" height="40">
+                    <a href="https://" class="circle link">
+                    <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#instagram"></use>
                     </svg>
+                    </a>
                   </li>
                   <li class="social-icons">
-                    <svg class="social-icon" width="40" height="40">
+                    <a href="https://" class="circle link">
+                    <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#twitter"></use>
                     </svg>
+                    </a>
                   </li>
                   <li class="social-icons">
-                    <svg class="social-icon" width="40" height="40">
+                    <a href="https://" class="circle link">
+                    <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#facebook"></use>
                     </svg>
+                    </a>
                   </li>
                   <li class="social-icons">
-                    <svg class="social-icon" width="40" height="40">
+                    <a href="https://" class="circle link">
+                    <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#linkedin"></use>
                     </svg>
+                    </a>
                   </li>
                 </ul>
                 </div>
@@ -189,24 +205,32 @@
                 <p class="work-position">Marketing</p>
                 <ul class="list">
                   <li class="social-icons">
-                    <svg class="social-icon" width="40" height="40">
+                    <a href="https://" class="circle link">
+                    <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#instagram"></use>
                     </svg>
+                    </a>
                   </li>
                   <li class="social-icons">
-                    <svg class="social-icon" width="40" height="40">
+                    <a href="https://" class="circle link">
+                    <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#twitter"></use>
                     </svg>
+                    </a>
                   </li>
                   <li class="social-icons">
-                    <svg class="social-icon" width="40" height="40">
+                    <a href="https://" class="circle link">
+                    <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#facebook"></use>
                     </svg>
+                    </a>
                   </li>
                   <li class="social-icons">
-                    <svg class="social-icon" width="40" height="40">
+                    <a href="https://" class="circle link">
+                    <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#linkedin"></use>
                     </svg>
+                    </a>
                   </li>
                 </ul>
                 </div>
@@ -219,24 +243,32 @@
                 <p class="work-position">UI Designer</p>
                 <ul class="list">
                   <li class="social-icons">
-                    <svg class="social-icon" width="40" height="40">
+                    <a href="https://" class="circle link">
+                    <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#instagram"></use>
                     </svg>
+                    </a>
                   </li>
                   <li class="social-icons">
-                    <svg class="social-icon" width="40" height="40">
+                    <a href="https://" class="circle link">
+                    <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#twitter"></use>
                     </svg>
+                    </a>
                   </li>
                   <li class="social-icons">
-                    <svg class="social-icon" width="40" height="40">
+                    <a href="https://" class="circle link">
+                    <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#facebook"></use>
                     </svg>
+                    </a>
                   </li>
                   <li class="social-icons">
-                    <svg class="social-icon" width="40" height="40">
+                    <a href="https://" class="circle link">
+                    <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#linkedin"></use>
                     </svg>
+                    </a>
                   </li>
                 </ul>
                 </div>
@@ -249,34 +281,46 @@
               <h2 class="our-customers">Customers</h2>
               <ul class="list">
                 <li class="client">
+                  <a href="https://" class="company link">
                   <svg class="client-icon" width="104" height="56">
                     <use href="./images/icons.svg#client-1"></use>
                   </svg>
+                  </a>
                 </li>
                 <li class="client">
+                  <a href="https://" class="company link">
                   <svg class="client-icon" width="104" height="56">
                     <use href="./images/icons.svg#client-2"></use>
                   </svg>
+                  </a>
                 </li>
                 <li class="client">
+                  <a href="https://" class="company link">
                   <svg class="client-icon" width="104" height="56">
                     <use href="./images/icons.svg#client-3"></use>
                   </svg>
+                  </a>
                 </li>
                 <li class="client">
+                  <a href="https://" class="company link">
                   <svg class="client-icon" width="104" height="56">
                     <use href="./images/icons.svg#client-4"></use>
                   </svg>
+                  </a>
                 </li>
                 <li class="client">
+                  <a href="https://" class="company link">
                   <svg class="client-icon" width="104" height="56">
                     <use href="./images/icons.svg#client-5"></use>
                   </svg>
+                  </a>
                 </li>
                 <li class="client">
+                  <a href="https://" class="company link">
                   <svg class="client-icon" width="104" height="56">
                     <use href="./images/icons.svg#client-6"></use>
                   </svg>
+                  </a>
                 </li>
               </ul>
             </div>
@@ -295,24 +339,32 @@
               <p class="social-media">Social media</p>
               <ul class="list">
                 <li class="media-icons">
-                  <svg class="media-icon" width="40" height="40">
+                  <a href="https://" class="media link">
+                  <svg class="media-icon" width="24" height="24">
                     <use href="./images/icons.svg#media-instagram"></use>
                   </svg>
+                  </a>
                 </li>
                 <li class="media-icons">
-                  <svg class="media-icon" width="40" height="40">
+                  <a href="https://" class="media link">
+                  <svg class="media-icon" width="24" height="24">
                     <use href="./images/icons.svg#media-twitter"></use>
                   </svg>
+                  </a>
                 </li>
                 <li class="media-icons">
-                  <svg class="media-icon" width="40" height="40">
+                  <a href="https://" class="media link">
+                  <svg class="media-icon" width="24" height="24">
                     <use href="./images/icons.svg#media-facebook"></use>
                   </svg>
+                  </a>
                 </li>
                 <li class="media-icons">
-                  <svg class="media-icon" width="40" height="40">
+                  <a href="https://" class="media link">
+                  <svg class="media-icon" width="24" height="24">
                     <use href="./images/icons.svg#media-linkedin"></use>
                   </svg>
+                  </a>
                 </li>
               </ul>
             </div>
