--- a/index.html
+++ b/index.html
@@ -129,28 +129,28 @@
                   <p class="work-position">Product Designer</p>
                   <ul class="list">
                     <li class="social-icons">
-                      <a href="https://" class="circle link">
+                      <a href="https://www.instagram.com" class="circle link">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                       </a>
                     </li>
                     <li class="social-icons">
-                      <a href="https://" class="circle link">
+                      <a href="https://twitter.com" class="circle link">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                       </a>
                     </li>
                     <li class="social-icons">
-                      <a href="https://" class="circle link">
+                      <a href="https://facebook.com" class="circle link">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                       </a>
                     </li>
                     <li class="social-icons">
-                      <a href="https://" class="circle link">
+                      <a href="https://www.linkedin.com" class="circle link">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
@@ -167,28 +167,28 @@
                 <p class="work-position">Frontend Developer</p>
                 <ul class="list">
                   <li class="social-icons">
-                    <a href="https://" class="circle link">
+                    <a href="https://www.instagram.com" class="circle link">
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#instagram"></use>
                     </svg>
                     </a>
                   </li>
                   <li class="social-icons">
-                    <a href="https://" class="circle link">
+                    <a href="https://twitter.com" class="circle link">
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#twitter"></use>
                     </svg>
                     </a>
                   </li>
                   <li class="social-icons">
-                    <a href="https://" class="circle link">
+                    <a href="https://facebook.com" class="circle link">
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#facebook"></use>
                     </svg>
                     </a>
                   </li>
                   <li class="social-icons">
-                    <a href="https://" class="circle link">
+                    <a href="https://www.linkedin.com" class="circle link">
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#linkedin"></use>
                     </svg>
@@ -205,28 +205,28 @@
                 <p class="work-position">Marketing</p>
                 <ul class="list">
                   <li class="social-icons">
-                    <a href="https://" class="circle link">
+                    <a href="https://www.instagram.com" class="circle link">
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#instagram"></use>
                     </svg>
                     </a>
                   </li>
                   <li class="social-icons">
-                    <a href="https://" class="circle link">
+                    <a href="https://twitter.com" class="circle link">
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#twitter"></use>
                     </svg>
                     </a>
                   </li>
                   <li class="social-icons">
-                    <a href="https://" class="circle link">
+                    <a href="https://facebook.com" class="circle link">
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#facebook"></use>
                     </svg>
                     </a>
                   </li>
                   <li class="social-icons">
-                    <a href="https://" class="circle link">
+                    <a href="https://www.linkedin.com" class="circle link">
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#linkedin"></use>
                     </svg>
@@ -243,28 +243,28 @@
                 <p class="work-position">UI Designer</p>
                 <ul class="list">
                   <li class="social-icons">
-                    <a href="https://" class="circle link">
+                    <a href="https://www.instagram.com" class="circle link">
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#instagram"></use>
                     </svg>
                     </a>
                   </li>
                   <li class="social-icons">
-                    <a href="https://" class="circle link">
+                    <a href="https://twitter.com" class="circle link">
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#twitter"></use>
                     </svg>
                     </a>
                   </li>
                   <li class="social-icons">
-                    <a href="https://" class="circle link">
+                    <a href="https://facebook.com" class="circle link">
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#facebook"></use>
                     </svg>
                     </a>
                   </li>
                   <li class="social-icons">
-                    <a href="https://" class="circle link">
+                    <a href="https://www.linkedin.com" class="circle link">
                     <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#linkedin"></use>
                     </svg>
@@ -281,42 +281,42 @@
               <h2 class="our-customers">Customers</h2>
               <ul class="list">
                 <li class="client">
-                  <a href="https://" class="company link">
+                  <a href="https://client.com" class="company link">
                   <svg class="client-icon" width="104" height="56">
                     <use href="./images/icons.svg#client-1"></use>
                   </svg>
                   </a>
                 </li>
                 <li class="client">
-                  <a href="https://" class="company link">
+                  <a href="https://client.com" class="company link">
                   <svg class="client-icon" width="104" height="56">
                     <use href="./images/icons.svg#client-2"></use>
                   </svg>
                   </a>
                 </li>
                 <li class="client">
-                  <a href="https://" class="company link">
+                  <a href="https://client.com" class="company link">
                   <svg class="client-icon" width="104" height="56">
                     <use href="./images/icons.svg#client-3"></use>
                   </svg>
                   </a>
                 </li>
                 <li class="client">
-                  <a href="https://" class="company link">
+                  <a href="https://client.com" class="company link">
                   <svg class="client-icon" width="104" height="56">
                     <use href="./images/icons.svg#client-4"></use>
                   </svg>
                   </a>
                 </li>
                 <li class="client">
-                  <a href="https://" class="company link">
+                  <a href="https://client.com" class="company link">
                   <svg class="client-icon" width="104" height="56">
                     <use href="./images/icons.svg#client-5"></use>
                   </svg>
                   </a>
                 </li>
                 <li class="client">
-                  <a href="https://" class="company link">
+                  <a href="https://client.com" class="company link">
                   <svg class="client-icon" width="104" height="56">
                     <use href="./images/icons.svg#client-6"></use>
                   </svg>
@@ -339,28 +339,28 @@
               <p class="social-media">Social media</p>
               <ul class="list">
                 <li class="media-icons">
-                  <a href="https://" class="media link">
+                  <a href="https://www.instagram.com" class="media link">
                   <svg class="media-icon" width="24" height="24">
                     <use href="./images/icons.svg#media-instagram"></use>
                   </svg>
                   </a>
                 </li>
                 <li class="media-icons">
-                  <a href="https://" class="media link">
+                  <a href="https://twitter.com" class="media link">
                   <svg class="media-icon" width="24" height="24">
                     <use href="./images/icons.svg#media-twitter"></use>
                   </svg>
                   </a>
                 </li>
                 <li class="media-icons">
-                  <a href="https://" class="media link">
+                  <a href="https://facebook.com" class="media link">
                   <svg class="media-icon" width="24" height="24">
                     <use href="./images/icons.svg#media-facebook"></use>
                   </svg>
                   </a>
                 </li>
                 <li class="media-icons">
-                  <a href="https://" class="media link">
+                  <a href="https://www.linkedin.com" class="media link">
                   <svg class="media-icon" width="24" height="24">
                     <use href="./images/icons.svg#media-linkedin"></use>
                   </svg>
