--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
            <ul class="list portfolio">
               <!--Project Card 1-->
               <li class="portfolio-item">
-                <a href="" class="p-card link">
+                <a href="site.com" class="p-card link">
                   <img src="./images/img_8.jpg" alt="Bank App" class="img" width="360">
                   <div class="border">
                   <h2 class="project-name">Banking App Interface Concept</h2>
@@ -61,7 +61,7 @@
               </li>
               <!--Project Card 2-->
               <li class="portfolio-item">
-                <a href="" class="p-card link">
+                <a href="site.com" class="p-card link">
                 <img src="./images/img_9.jpg" alt="QR payment" class="img" width="360">
                 <div class="border">
                 <h2 class="project-name">Cashless Payment</h2>
@@ -71,7 +71,7 @@
               </li>
               <!--Project Card 3-->
               <li class="portfolio-item">
-                <a href="" class="p-card link">
+                <a href="site.com" class="p-card link">
                 <img src="./images/img_10.jpg" alt="Application from the site" class="img" width="360">
                 <div class="border">
                 <h2 class="project-name">Meditation App</h2>
@@ -81,7 +81,7 @@
               </li>
                 <!--Project Card 4-->
               <li class="portfolio-item">
-                <a href="" class="p-card link">
+                <a href="site.com" class="p-card link">
                 <img src="./images/img_11.jpg" alt="Steering wheel" class="img" width="360">
                 <div class="border">
                 <h2 class="project-name">Taxi Service</h2>
@@ -91,7 +91,7 @@
               </li>
                  <!--Project Card 5-->
               <li class="portfolio-item">
-                <a href="" class="p-card link">
+                <a href="site.com" class="p-card link">
                 <img src="./images/img_12.jpg" alt="Screensavers for phone" class="img" width="360">
                 <div class="border">
                 <h2 class="project-name">Screen Illustrations</h2>
@@ -101,7 +101,7 @@
               </li>
                 <!--Project Card 6-->
               <li class="portfolio-item">
-                <a href="" class="p-card link">
+                <a href="site.com" class="p-card link">
                 <img src="./images/img_13.jpg" alt="Girl with headphones" class="img" width="360">
                 <div class="border">
                 <h2 class="project-name">Online Courses</h2>
@@ -111,7 +111,7 @@
               </li>
                 <!--Project Card 7-->
               <li class="portfolio-item">
-                <a href="" class="p-card link">
+                <a href="site.com" class="p-card link">
                 <img src="./images/img_14.jpg" alt="Page design" class="img" width="360">
                 <div class="border">
                 <h2 class="project-name">Instagram Stories Concept</h2>
@@ -121,7 +121,7 @@
               </li>
                 <!--Project Card 8-->
               <li class="portfolio-item">
-                <a href="" class="p-card link">
+                <a href="site.com" class="p-card link">
                 <img src="./images/img_15.jpg" alt="Man with groceries" class="img" width="360">
                 <div class="border">
                 <h2 class="project-name">Organic Food</h2>
@@ -131,7 +131,7 @@
               </li>
                <!--Project Card 9-->
                <li class="portfolio-item">
-                <a href="" class="p-card link">
+                <a href="site.com" class="p-card link">
                 <img src="./images/img_16.jpg" alt="Сooking cappuccino" class="img" width="360">
                 <div class="border">
                 <h2 class="project-name">Fresh Coffee</h2>
@@ -156,24 +156,32 @@
           <p class="social-media">Social media</p>
           <ul class="list">
             <li class="media-icons">
-              <svg class="media-icon" width="40" height="40">
+              <a href="https://www.instagram.com" class="media link">
+              <svg class="media-icon" width="24" height="24">
                 <use href="./images/icons.svg#media-instagram"></use>
               </svg>
+              </a>
             </li>
             <li class="media-icons">
-              <svg class="media-icon" width="40" height="40">
+              <a href="https://twitter.com" class="media link">
+              <svg class="media-icon" width="24" height="24">
                 <use href="./images/icons.svg#media-twitter"></use>
               </svg>
+              </a>
             </li>
             <li class="media-icons">
-              <svg class="media-icon" width="40" height="40">
+              <a href="https://facebook.com" class="media link">
+              <svg class="media-icon" width="24" height="24">
                 <use href="./images/icons.svg#media-facebook"></use>
               </svg>
+              </a>
             </li>
             <li class="media-icons">
-              <svg class="media-icon" width="40" height="40">
+              <a href="https://www.linkedin.com" class="media link">
+              <svg class="media-icon" width="24" height="24">
                 <use href="./images/icons.svg#media-linkedin"></use>
               </svg>
+              </a>
             </li>
           </ul>
         </div>
